<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="setData"
            type="com.eneselcuk.gameyuppiapp.ui.activity.login.signUp.SignUpActivity" />

        <variable
            name="clickSignUp"
            type="com.eneselcuk.gameyuppiapp.ui.activity.login.signUp.SignUpViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.login.signUp.SignUpFragment">


        <TextView
            android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/bitter_bold"
            android:text="@string/signup"
            android:textColor="@color/red_wine"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tex_new_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/create"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/signup_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_signup" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_very_small"
            app:layout_constraintBottom_toTopOf="@id/signup_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userName"
                android:inputType="text"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_very_small"
            app:layout_constraintBottom_toTopOf="@id/signup_surname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_surname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_very_small"
            app:layout_constraintBottom_toTopOf="@id/signup_birth_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sname"
                android:inputType="text"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_birth_data"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_very_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_data"
                android:inputType="datetime"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_very_small"
            app:layout_constraintBottom_toTopOf="@id/passwordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_birth_data">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/testEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:gravity="bottom"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_small"
            app:layout_constraintBottom_toTopOf="@id/confirmPasswordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="0dp"
            android:gravity="bottom"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/c_password"
                android:inputType="textPassword"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:backgroundTint="@color/milk"
            android:minWidth="200dp"
            android:minHeight="60dp"
            android:onClick="@{() -> clickSignUp.signUp(userNameEditText.getText().toString(),nameEditText.getText().toString(),surnameEditText.getText().toString(),birthEditText.getText().toString(),emailEditText.getText().toString(),passwordEditText.getText().toString(),confirmPasswordEditText.getText().toString())}"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="21sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>