<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="setDataAndClick"
            type="com.eneselcuk.gameyuppiapp.ui.activity.login.login.LoginActivity" />

        <variable
            name="setData"
            type="com.eneselcuk.gameyuppiapp.ui.activity.login.login.LoginViewModel" />

        <variable
            name="setDataUiState"
            type="com.eneselcuk.gameyuppiapp.ui.activity.login.login.LoginUiState" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.login.signUp.SignUpFragment">


        <TextView
            android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="150dp"
            android:fontFamily="@font/bitter_bold"
            android:text="@string/login"
            android:textColor="@color/red_wine"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/tex_new_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tex_new_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/loginEnter"
            android:textColor="@color/teal_700"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_signup" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLogin"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_very_small"
            app:layout_constraintBottom_toTopOf="@id/passwordInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tex_new_signup">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/testEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="20dp"
            android:gravity="bottom"
            android:textColorHint="@color/red_wine"
            app:boxStrokeColor="@color/chardonnay"
            app:boxStrokeWidth="@dimen/stroke_width_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailLogin"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/eden"
                android:textColorHint="@color/teal_700" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="100dp"
            android:backgroundTint="@color/milk"
            android:minWidth="200dp"
            android:minHeight="60dp"
            android:onClick="@{() -> setData.signIn(emailEditText.getText().toString(),passwordEditText.getText().toString())}"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/teal_700"
            android:textSize="21sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/text_doNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="50dp"
            android:text="@string/doAccount"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/text_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:fontFamily="@font/inter_bold"
            android:onClick="@{() -> setDataAndClick.signUp()}"
            android:text="Sign Up"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/text_doNot"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>